# PartII-Diss

./: .gitignore  Cargo.toml  cal.chains  cal.edge  cal.nodes
benches/: benchmarks.rs
data_processing/: processing_data.ipynb  requirements.txt
data_processing/bandwidth/: bandwidth_100000.json  bandwidth_100000000.json
data_processing/latency/: latency_100.json  latency_10000.json  latency_1000000.json
data_processing/matrix/: matrix125.json  matrix250.json  matrix375.json  matrix500.json
data_processing/matrix2/: matrix125.json  matrix250.json  matrix375.json  matrix500.json
data_processing/matrix3/: matrix1024.json  matrix128.json  matrix256.json  matrix32.json  matrix512.json  matrix64.json
data_processing/matrix_core/: matrix_core_32.json
data_processing/matrix_dist/: matrix_dist_128.json  matrix_dist_256.json  matrix_dist_32.json  matrix_dist_64.json
data_processing/no_latency_bench/bandwidth/: bandwidth_100000000000.json
data_processing/no_latency_bench/matrix_core/: matrix_core_1024.json  matrix_core_128.json  matrix_core_256.json  matrix_core_512.json  (+1 more)
data_processing/startup/: startup_100.json
data_processing/thread_time/: data_local1.json  data_local2.json  data_remote2.json
data_processing/wall_time/: data_local1.json  data_remote1.json  data_remote2.json
src/: integration_tests.rs  lib.rs  main.rs
src/broadcast/: mod.rs  tests.rs
src/graph_optimisation/: mod.rs  tests.rs
src/matmul/: comm_method.rs  mod.rs  tests.rs
src/matrix_multiplication/: mod.rs  tests.rs
src/processor/: debug.rs  mod.rs  tests.rs
src/types/: mod.rs
(+32 files in other folders)
